--- a/fronttest.html
+++ b/fronttest.html
@@ -17,8 +17,8 @@
             <h2 class="main-subtitle">board of aesthetics</h2>
         </div>
         <div class="searchbox">
-            <input type="text" class="search-box" placeholder="Enter your search here ▋"></input>
-            <!--<button class="search-button">Search</button>-->
+            <input type="text" class="search-box" placeholder="▋"></input>
+            <!--<button class="search_button">Search</button>-->
         </div>
     </div>
 </body>
