dunno where the json comes from but ts done design

--- a/fronttest.html
+++ b/fronttest.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
     <main>
 <body>
@@ -16,9 +17,9 @@
             <h1 class="main_title">AESBOORU.</h1>
             <h2 class="main-subtitle">board of aesthetics</h2>
         </div>
-        <div class="searchbox">
+        <div class="input_box">
             <input type="text" class="search-box" placeholder="▋"></input>
-            <!--<button class="search_button">Search</button>-->
+            <div class="button-container"><button class="search_button">search</button></div>
         </div>
     </div>
 </body>
